CSSと担当のところに飛んだあとの下地づくり

--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
 .red{
     color: red;
+    font-size: 24px;
+    border-bottom: solid 4px #8c55a9;}
+
+body {
+  background-color: #e2c7c7;
+  color: #000000;
 }
+li{border-left: solid 2px #cc0000;
+   padding-left: 15px;}
+.k{font-weight: bold}
